WORKFITAI-18 : feat Enhance authentication service with role-based access control, JWT handling, and error management